<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/quote_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:text="@string/default_quote" />

    <TextView
        android:id="@+id/reference_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quote_text"
        android:layout_alignParentEnd="true"
        android:textSize="12sp"
        android:textColor="@color/darkGray"
        android:text="@string/default_reference" />

    <TextView
        android:id="@+id/theme_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quote_text"
        android:layout_alignParentStart="true"
        android:textSize="10sp"
        android:textAllCaps="true"
        android:textColor="@color/darkGray"
        android:text="@string/default_theme" />

    <ImageView
        android:id="@+id/save_icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_below="@id/quote_text"
        android:layout_toStartOf="@id/reference_text"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_not_saved"
        android:contentDescription="@string/save_quote" />

</RelativeLayout>
